Add Result to hold the outputs of a simulation